TestSuite/errors/err0346_ResInLambda.pas
function f1: byte;
begin
  
  var p: ()->() := ()->
  begin
    Result := 0;
  end;
  
end;

begin 
end.